see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-Mar-2011 Jean-Marie Simonet
 # [#25356] Following  tracker 25210. Thanks Christophe.
 
16-Mar-2011 Mark Dexter
 # Fix typo in 25308 (revision 20969)

16-Mar-2011 Christophe Demko
 # [#25318] Wrong order in Module Latest Users (Marijke Stuivenberg)
 # [#23458] Unused JElement classes in core (Rouven Weßling)
 # [#25228] No javascript form validation after clicking submit button (Piotr Mocko, Rouven Weßling)
 # [#25111] Don't use the javascript pseudo protocol when it isn't necessary (Rouven Weßling)

16-Mar-2011 Jean-Marie Simonet
 # [#25338] *Unused show title parameter for archives menu item
 
15-Mar-2011 Jean-Marie Simonet
 # [#25088] System information > Directory Permissions: List incomplete. Thanks Nikolai and Reinhard.
 # [#25027] module assignment slider gives inaccurate information for modules with "all except". Thanks Elin and Christophe.
 # [#25308] Article Title will not go away, no matter what. Thanks Elin

14-Mar-2011 Jean-Marie Simonet
 # [#25320] Typos on the 404 page. Thanks Bill.
 #$ [#25259] Article edit page permits you to attempt to edit checked-out articles, causing 403 errors. Thanks Bernie
 
13-Mar-2011 Christophe Demko
 # [#24998] Don't add aria role breadcrumbs (Rouven Weßling, Mark Dexter)

12-Mar-2011 Christophe Demko
 # [#25289] The front end rendering of the media field is missing srings (Elin Waring)
 # [#25276] *Weblinks adding words "Web links" before the actual link text (Jean-Marie Simonet)
 # [#25305] Wrong CSS class declaration (Ernesto Patarroyo, bill richardson, Jean-Marie Simonet)

11-Mar-2011 Jean-Marie Simonet