@@ -403,6 +403,7 @@ JLIB_INSTALLER_ABORT_MOD_INSTALL_COPY_SETUP="Module Install: Could not copy setu
 JLIB_INSTALLER_ABORT_MOD_INSTALL_CREATE_DIRECTORY="Module %1$s: Failed to create directory: %2$s"
 JLIB_INSTALLER_ABORT_MOD_INSTALL_CUSTOM_INSTALL_FAILURE="Module Install: Custom install routine failure"
 JLIB_INSTALLER_ABORT_MOD_INSTALL_DIRECTORY="Module %1$s: Another module is already using directory: %2$s"
+JLIB_INSTALLER_ABORT_MOD_INSTALL_MANIFEST="Module Install: Could not copy PHP manifest file."
 JLIB_INSTALLER_ABORT_MOD_INSTALL_NOFILE="Module %s: No module file specified"
 JLIB_INSTALLER_ABORT_MOD_INSTALL_SQL_ERROR="Module %1$s: SQL error file %2$s"
 JLIB_INSTALLER_ABORT_MOD_ROLLBACK="Module %1$s: %2$s"
